saint-lascivious.github.io: format, storage, version
 - consistent embiggening
   embiggen secondary nav lists
 - minor verbiage changes
   expand and correct some ids, texts and titles
 - bump pwa cache version
   version 1.5
 - use localstorage for consolelogging

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/sainternet.min.js
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   resources/javascript/.formatted/debug.min.js
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/debug.min.js
 - modified:   resources/javascript/random_url.min.js
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -178,15 +178,15 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
-            <ul>
-              <li><a href="404.html#404examplequeries">#Example Pokédex over DNS Queries</a></li>
-              <li><a href="404.html#404examplequeryusingdig">#Using dig</a></li>
-              <li><a href="404.html#404examplequeryusingdnslookup">#Using dnslookup</a></li>
-              <li><a href="404.html#404examplequeryusingnslookup">#Using nslookup</a></li>
-            </ul>
             <p class="embiggen sainternet-subheader-centered">
               A wild <b>Luxio</b> appeared!
             </p>
+            <ul>
+              <li><a href="404.html#404examplequeries"><span class="embiggen">#Example Pokédex over DNS Queries</span></a></li>
+              <li><a href="404.html#404examplequeryusingdig"><span class="embiggen">#Using dig</span></a></li>
+              <li><a href="404.html#404examplequeryusingdnslookup"><span class="embiggen">#Using dnslookup</span></a></li>
+              <li><a href="404.html#404examplequeryusingnslookup"><span class="embiggen">#Using nslookup</span></a></li>
+            </ul>
             <p>
               Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
             </p>
