--- a/.formatted/archive.html
+++ b/.formatted/archive.html
@@ -180,12 +180,12 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Archived Posts</span></h3>
             <ul>
-              <li><a href="archive.html#2022metrics">#2022 Metrics</a></li>
-              <li><a href="archive.html#munin-pihole-plugins-v08-02-00">#Munin Pi-hole Plugins: 08.02.00</a></li>
-              <li><a href="archive.html#reportingproblems">#Reporting Problems</a></li>
-              <li><a href="archive.html#aquickstop">#A QUICk Stop</a></li>
-              <li><a href="archive.html#materialdesigndark">#Material Design <s>Lite</s> Dark</a></li>
-              <li><a href="archive.html#iosmacosmadeeasy">#iOS/macOS Made Easy</a></li>
+              <li><a href="archive.html#2022metrics"><span class="embiggen">#2022 Metrics</span></a></li>
+              <li><a href="archive.html#munin-pihole-plugins-v08-02-00"><span class="embiggen">#Munin Pi-hole Plugins: 08.02.00</span></a></li>
+              <li><a href="archive.html#reportingproblems"><span class="embiggen">#Reporting Problems</span></a></li>
+              <li><a href="archive.html#aquickstop"><span class="embiggen">#A QUICk Stop</span></a></li>
+              <li><a href="archive.html#materialdesigndark"><span class="embiggen">#Material Design <s>Lite</s> Dark</a></span></li>
+              <li><a href="archive.html#iosmacosmadeeasy"><span class="embiggen">#iOS/macOS Made Easy</span></a></li>
             </ul>
           </div>
         </div>
