--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -163,10 +163,10 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Debug</span></h3>
             <ul>
-              <li><a href="debug.html#consolelogging">#Console Logging</a></li>
-              <li><a href="debug.html#deletestorage">#Delete Storage</a></li>
-              <li><a href="debug.html#pingserviceworker">#Ping Service Worker</a></li>
-              <li><a href="debug.html#serviceworkerinfo">#Service Worker Info</a></li>
+              <li><a href="debug.html#consolelogging"><span class="embiggen">#Console Logging</span></a></li>
+              <li><a href="debug.html#deletestorage"><span class="embiggen">#Delete Storage</span></a></li>
+              <li><a href="debug.html#pingserviceworker"><span class="embiggen">#Ping Service Worker</span></a></li>
+              <li><a href="debug.html#serviceworkerinfo"><span class="embiggen">#Service Worker Info</span></a></li>
             </ul>
           </div>
         </div>
