--- a/.formatted/devdiary.html
+++ b/.formatted/devdiary.html
@@ -186,9 +186,9 @@
               Often about technical topics.
             </p>
             <ul>
-              <li><a href="devdiary.html#idliketothinkimprettyprogressive">#I’d Like to Think I’m Pretty Progressive</a></li>
-              <li><a href="devdiary.html#gottagofast">#Gotta Go Fast!</a></li>
-              <li><a href="devdiary.html#goingoffline">#Going Offline</a></li>
+              <li><a href="devdiary.html#idliketothinkimprettyprogressive"><span class="embiggen">#I’d Like to Think I’m Pretty Progressive</span></a></li>
+              <li><a href="devdiary.html#gottagofast"><span class="embiggen">#Gotta Go Fast!</span></a></li>
+              <li><a href="devdiary.html#goingoffline"><span class="embiggen">#Going Offline</span></a></li>
             </ul>
           </div>
         </div>
