--- a/.formatted/filtereddns.html
+++ b/.formatted/filtereddns.html
@@ -181,12 +181,12 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Filtered DNS</span></h3>
             <ul>
-              <li>&gt; <a href="frequentlyaskedquestions.html#frequentlyaskedquestions">Frequently Asked Questions</a></li>
-              <li>&gt; <a href="connecttosainternet.html#connecttosainternet">Connect to Sainternet</a></li>
-              <li>&gt; <a href="portsandprotocols.html#portsandprotocols">Ports and Protocols</a></li>
-              <li>&gt; <a href="technologies.html#technologies">Technologies</a></li>
-              <li>&gt; <a href="testsainternet.html#testsainternet">Test Sainternet</a></li>
-              <li>&gt; <a href="reportaproblem.html#reportaproblem">Report a Problem</a></li>
+              <li>&gt; <a href="frequentlyaskedquestions.html#frequentlyaskedquestions"><span class="embiggen">Frequently Asked Questions</span></a></li>
+              <li>&gt; <a href="connecttosainternet.html#connecttosainternet"><span class="embiggen">Connect to Sainternet</span></a></li>
+              <li>&gt; <a href="portsandprotocols.html#portsandprotocols"><span class="embiggen">Ports and Protocols</span></a></li>
+              <li>&gt; <a href="technologies.html#technologies"><span class="embiggen">Technologies</span></a></li>
+              <li>&gt; <a href="testsainternet.html#testsainternet"><span class="embiggen">Test Sainternet</span></a></li>
+              <li>&gt; <a href="reportaproblem.html#reportaproblem"><span class="embiggen">Report a Problem</span></a></li>
             </ul>
             <p>
               Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over <a href="portsandprotocols.html#portsandprotocols">all your favourite acronyms</a>.
