--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -172,15 +172,15 @@
               Answers to some frequently asked questions regarding <code>dns.sainternet.xyz</code> and <code>sainternet.xyz</code>.
             </p>
             <ul>
-              <li><a href="frequentlyaskedquestions.html#yourispisokwiththis">#Your ISP Is OK with This?</a></li>
-              <li><a href="frequentlyaskedquestions.html#whatswithalltherainbows">#What’s with All the Rainbows?</a></li>
-              <li><a href="frequentlyaskedquestions.html#isdnssainternetxyzlegal">#Is dns.sainternet.xyz Legal?</a></li>
-              <li><a href="frequentlyaskedquestions.html#doesdnssainternetxyzhaveanapi">#Does dns.sainternet.xyz Have an API?</a></li>
-              <li><a href="frequentlyaskedquestions.html#pwaversionneverseemstochange">#The PWA Version Never Seems to Change, What Gives?</a></li>
-              <li><a href="frequentlyaskedquestions.html#whowhatwhenwhereandwhy">#Who, What, When, Where and Why?</a></li>
-              <li><a href="frequentlyaskedquestions.html#howmuch">#How Much?</a></li>
-              <li><a href="frequentlyaskedquestions.html#howdoessainternetmakemoney">#How does Sainternet Make Money?</a></li>
-              <li><a href="frequentlyaskedquestions.html#sowhofundssainternet">#So, Who Funds Sainternet?</a></li>
+              <li><a href="frequentlyaskedquestions.html#yourispisokwiththis"><span class="embiggen">#Your ISP Is OK with This?</span></a></li>
+              <li><a href="frequentlyaskedquestions.html#whatswithalltherainbows"><span class="embiggen">#What’s with All the Rainbows?</span></a></li>
+              <li><a href="frequentlyaskedquestions.html#isdnssainternetxyzlegal"><span class="embiggen">#Is dns.sainternet.xyz Legal?</span></a></li>
+              <li><a href="frequentlyaskedquestions.html#doesdnssainternetxyzhaveanapi"><span class="embiggen">#Does dns.sainternet.xyz Have an API?</span></a></li>
+              <li><a href="frequentlyaskedquestions.html#whydoesntthepwaversioneverchange"><span class="embiggen">#Why Doesn’t the PWA Version Ever Change?</span></a></li>
+              <li><a href="frequentlyaskedquestions.html#whowhatwhenwhereandwhy"><span class="embiggen">#Who, What, When, Where and Why?</span></a></li>
+              <li><a href="frequentlyaskedquestions.html#howmuch"><span class="embiggen">#How Much?</span></a></li>
+              <li><a href="frequentlyaskedquestions.html#howdoessainternetmakemoney"><span class="embiggen">#How Does Sainternet Make Money?</span></a></li>
+              <li><a href="frequentlyaskedquestions.html#sowhofundssainternet"><span class="embiggen">#So, Who Funds Sainternet?</span></a></li>
             </ul>
           </div>
         </div>
@@ -201,7 +201,10 @@
               I honestly have no idea.
             </p>
             <p>
-              Historically my ISP has been quite progressive, and they have also been willing to work with me. I suspect they're not so much "OK" with the <code>dns.sainternet.xyz</code> research resolver, as they not "not OK" with it."
+              Historically my ISP has been quite progressive, and they have also been willing to work with me. My suspicion is that they're not so much "OK" with the <code>dns.sainternet.xyz</code> research resolver, as they are "not, <i>not</i> OK" with it. They have every opportunity to stop me.
+            </p>
+            <p>
+              Time will tell.
             </p>
           </div>
         </div>
@@ -295,10 +298,10 @@
             </p>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="pwaversionneverseemstochange">
+        <div class="sainternet-container mdl-grid" id="whydoesntthepwaversioneverchange">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">The PWA Version Never Seems to Change, What Gives?</span></h3>
+            <h3><span class="embiggen">Why Doesn’t the PWA Version Ever Change?</span></h3>
             <p class="embiggen sainternet-subheader-centered">
               In Short
             </p>
@@ -381,7 +384,7 @@
         <div class="sainternet-container mdl-grid" id="howdoessainternetmakemoney">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">How does Sainternet Make Money?</span></h3>
+            <h3><span class="embiggen">How Does Sainternet Make Money?</span></h3>
             <p>
               It doesn't.
             </p>
