--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -178,11 +178,11 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">National Pokédex over DNS</span></h3>
             <ul>
-              <li><a href="pokedexoverdns.html#examplequeries">#Example Pokédex over DNS Queries</a></li>
-              <li><a href="pokedexoverdns.html#examplequeryusingdig">#Using dig</a></li>
-              <li><a href="pokedexoverdns.html#examplequeryusingdnslookup">#Using dnslookup</a></li>
-              <li><a href="pokedexoverdns.html#examplequeryusingnslookup">#Using nslookup</a></li>
-              <li><a href="pokedexoverdns.html#nationalpokedexunboundconfiguration">#National Pokédex Unbound Configuration</a></li>
+              <li><a href="pokedexoverdns.html#examplequeries"><span class="embiggen">#Example Pokédex over DNS Queries</span></a></li>
+              <li><a href="pokedexoverdns.html#examplequeryusingdig"><span class="embiggen">#Using dig</span></a></li>
+              <li><a href="pokedexoverdns.html#examplequeryusingdnslookup"><span class="embiggen">#Using dnslookup</span></a></li>
+              <li><a href="pokedexoverdns.html#examplequeryusingnslookup"><span class="embiggen">#Using nslookup</span></a></li>
+              <li><a href="pokedexoverdns.html#nationalpokedexunboundconfiguration"><span class="embiggen">#National Pokédex Unbound Configuration</span></a></li>
             </ul>
             <p>
               Sainternet is proud to present to you the <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT record</a> based National Pokédex over DNS!
