--- a/.formatted/technologies.html
+++ b/.formatted/technologies.html
@@ -177,10 +177,10 @@
               Sainternet Filtered DNS (<code>dns.sainternet.xyz</code>) is made possible using, but neither endorsed nor condoned by, the following projects.
             </p>
             <ul>
-              <li><a href="technologies.html#dnsdist">#dnsdist</a></li>
-              <li><a href="technologies.html#dnsproxy">#dnsproxy</a></li>
-              <li><a href="technologies.html#piholeftl">#pihole-FTL</a></li>
-              <li><a href="technologies.html#unbound">#unbound</a></li>
+              <li><a href="technologies.html#dnsdist"><span class="embiggen">#dnsdist</span></a></li>
+              <li><a href="technologies.html#dnsproxy"><span class="embiggen">#dnsproxy</span></a></li>
+              <li><a href="technologies.html#piholeftl"><span class="embiggen">#pihole-FTL</span></a></li>
+              <li><a href="technologies.html#unbound"><span class="embiggen">#unbound</span></a></li>
             </ul>
           </div>
         </div>
