--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -176,15 +176,15 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Pokémon #265<br>Wurmple</span></h3>
-            <ul>
-              <li><a href="265.html#265examplequeries">#Example Pokédex over DNS Queries</a></li>
-              <li><a href="265.html#265examplequeryusingdig">#Using dig</a></li>
-              <li><a href="265.html#265examplequeryusingdnslookup">#Using dnslookup</a></li>
-              <li><a href="265.html#265examplequeryusingnslookup">#Using nslookup</a></li>
-            </ul>
             <p class="embiggen sainternet-subheader-centered">
               A wild <b>Wurmple</b> appeared!
             </p>
+            <ul>
+              <li><a href="265.html#265examplequeries"><span class="embiggen">#Example Pokédex over DNS Queries</span></a></li>
+              <li><a href="265.html#265examplequeryusingdig"><span class="embiggen">#Using dig</span></a></li>
+              <li><a href="265.html#265examplequeryusingdnslookup"><span class="embiggen">#Using dnslookup</span></a></li>
+              <li><a href="265.html#265examplequeryusingnslookup"><span class="embiggen">#Using nslookup</span></a></li>
+            </ul>
             <p>
               Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
             </p>
