--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -177,10 +177,10 @@
               The following describes connecting to Sainternet Filtered DNS in several platforms, services.
             </p>
             <ul>
-              <li><a href="connecttosainternet.html#androidprivatedns">#Android Private DNS</a></li>
-              <li><a href="connecttosainternet.html#appleiosmacos">#Apple iOS/MacOS</a></li>
-              <li><a href="connecttosainternet.html#googlechromechromium">#Google Chrome/Chromium</a></li>
-              <li><a href="connecttosainternet.html#mozillafirefox">#Mozilla Firefox</a></li>
+              <li><a href="connecttosainternet.html#androidprivatedns"><span class="embiggen">#Android Private DNS</span></a></li>
+              <li><a href="connecttosainternet.html#appleiosmacos"><span class="embiggen">#Apple iOS/MacOS</span></a></li>
+              <li><a href="connecttosainternet.html#googlechromechromium"><span class="embiggen">#Google Chrome/Chromium</span></a></li>
+              <li><a href="connecttosainternet.html#mozillafirefox"><span class="embiggen">#Mozilla Firefox</span></a></li>
             </ul>
           </div>
         </div>
