--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -196,16 +196,16 @@
               This page will serve to detail news and updates relevant to Sainternet such as new features and developments, planned maintenance, etc.
             </p>
             <ul>
-              <li>&gt; <a href="devdiary.html#devdiary">Dev Diary</a></li>
-              <li>&gt; <a href="archive.html#archivedposts">Archived Posts</a></li>
+              <li>&gt; <a href="devdiary.html#devdiary"><span class="embiggen">Dev Diary</span></a></li>
+              <li>&gt; <a href="archive.html#archivedposts"><span class="embiggen">Archived Posts</span></a></li>
             </ul>
             <ul>
-              <li><a href="newsandupdates.html#somepunaboutblocksorblocking">#Some Pun About Blocks or Blocking</a></li>
-              <li><a href="newsandupdates.html#thepolishinvasionof2023">#The Polish Invasion of 2023</a></li>
-              <li><a href="newsandupdates.html#certaindoom">#CERTain Doom</a></li>
-              <li><a href="newsandupdates.html#unepokedexsilvousplait">#Une Pokédex, S'il Vous Plaît</a></li>
-              <li><a href="newsandupdates.html#analyticsdisclosure">#Analytics Disclosure</a></li>
-              <li><a href="newsandupdates.html#pwa">#PWA!</a></li>
+              <li><a href="newsandupdates.html#somepunaboutblocksorblocking"><span class="embiggen">#Some Pun About Blocks or Blocking</span></a></li>
+              <li><a href="newsandupdates.html#thepolishinvasionof2023"><span class="embiggen">#The Polish Invasion of 2023</span></a></li>
+              <li><a href="newsandupdates.html#certaindoom"><span class="embiggen">#CERTain Doom</span></a></li>
+              <li><a href="newsandupdates.html#unepokedexsilvousplait"><span class="embiggen">#Une Pokédex, S'il Vous Plaît</span></a></li>
+              <li><a href="newsandupdates.html#analyticsdisclosure"><span class="embiggen">#Analytics Disclosure</span></a></li>
+              <li><a href="newsandupdates.html#pwa"><span class="embiggen">#PWA!</span></a></li>
             </ul>
           </div>
         </div>
