--- a/.formatted/reportaproblem.html
+++ b/.formatted/reportaproblem.html
@@ -177,10 +177,10 @@
               The following sections describe various ways in which adding your voice can help <code>dns.sainternet.xyz</code> and, or <code>sainternet.xyz</code> improve.
             </p>
             <ul>
-              <li><a href="reportaproblem.html#bugreport">#Bug Report</a></li>
-              <li><a href="reportaproblem.html#blacklistproposal">#Blacklist Proposal</a></li>
-              <li><a href="reportaproblem.html#whitelistproposal">#Whitelist Proposal</a></li>
-              <li><a href="reportaproblem.html#securitydisclosure">#Security Disclosure</a></li>
+              <li><a href="reportaproblem.html#bugreport"><span class="embiggen">#Bug Report</span></a></li>
+              <li><a href="reportaproblem.html#blacklistproposal"><span class="embiggen">#Blacklist Proposal</span></a></li>
+              <li><a href="reportaproblem.html#whitelistproposal"><span class="embiggen">#Whitelist Proposal</span></a></li>
+              <li><a href="reportaproblem.html#securitydisclosure"><span class="embiggen">#Security Disclosure</span></a></li>
             </ul>
           </div>
         </div>
