--- a/.formatted/testsainternet.html
+++ b/.formatted/testsainternet.html
@@ -177,9 +177,9 @@
               The following describes testing Sainternet Filtered DNS using several methods, utilities.
             </p>
             <ul>
-              <li><a href="testsainternet.html#usingdig">#Using dig</a></li>
-              <li><a href="testsainternet.html#usingdnslookup">#Using dnslookup</a></li>
-              <li><a href="testsainternet.html#usingnslookup">#Using nslookup</a></li>
+              <li><a href="testsainternet.html#usingdig"><span class="embiggen">#Using dig</span></a></li>
+              <li><a href="testsainternet.html#usingdnslookup"><span class="embiggen">#Using dnslookup</span></a></li>
+              <li><a href="testsainternet.html#usingnslookup"><span class="embiggen">#Using nslookup</span></a></li>
             </ul>
           </div>
         </div>
