saint-lascivious.github.io: every cat deserves scritches always
Changes to be committed:
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   newsandupdates.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -200,6 +200,7 @@
               <li>&gt; <a href="archive.html#archivedposts"><span class="embiggen">Archived Posts</span></a></li>
             </ul>
             <ul>
+              <li><a href="newsandupdates.html#everycatdeservesscritchesalways"><span class="embiggen">#Every Cat Deserves Scritches, Always</span></a></li>
               <li><a href="newsandupdates.html#somepunaboutblocksorblocking"><span class="embiggen">#Some Pun About Blocks or Blocking</span></a></li>
               <li><a href="newsandupdates.html#thepolishinvasionof2023"><span class="embiggen">#The Polish Invasion of 2023</span></a></li>
               <li><a href="newsandupdates.html#certaindoom"><span class="embiggen">#CERTain Doom</span></a></li>
@@ -207,6 +208,18 @@
               <li><a href="newsandupdates.html#analyticsdisclosure"><span class="embiggen">#Analytics Disclosure</span></a></li>
               <li><a href="newsandupdates.html#pwa"><span class="embiggen">#PWA!</span></a></li>
             </ul>
+          </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="everycatdeservesscritchesalways">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">Every Cat Deserves Scritches, Always</span></h3>
+            <p class="embiggen" id="datetime">
+              first posted on Thursday, 1 June 2023 00:20+12:00 (NZST)
+            </p>
+            <p>
+              The ECDSA <a href="newsandupdates.html#certaindoom">certificate transition</a> for <code>dns.sainternet.xyz</code> <a href="filtereddns.html#filtereddns">filtered DNS</a> is live.
+            </p>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="somepunaboutblocksorblocking">
