saint-lascivious.github.io: dev diary
Changes to be committed:
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   devdiary.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/devdiary.html
+++ b/.formatted/devdiary.html
@@ -186,10 +186,38 @@
               Often about technical topics.
             </p>
             <ul>
+              <li><a href="devdiary.html#killinghalfmyuserbaseandwhyiddoitagain"><span class="embiggen">#Killing Half My Userbase, and Why I’d Do It Again</span></a></li>
               <li><a href="devdiary.html#idliketothinkimprettyprogressive"><span class="embiggen">#I’d Like to Think I’m Pretty Progressive</span></a></li>
               <li><a href="devdiary.html#gottagofast"><span class="embiggen">#Gotta Go Fast!</span></a></li>
               <li><a href="devdiary.html#goingoffline"><span class="embiggen">#Going Offline</span></a></li>
             </ul>
+          </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="killinghalfmyuserbaseandwhyiddoitagain">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">Killing Half My Userbase, and Why I’d Do It Again</span></h3>
+            <p class="embiggen" id="datetime">
+              first posted on Thursday, 1 June 2023 01:10+12:00 (NZST)
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              It Was a Massacre
+            </p>
+            <p>
+              Making the decision to <a href="newsandupdates.html#everycatdeservesscritchesalways">transition to ECDSA</a> certification wasn't an easy one, but I would do it again in a heartbeat.
+            </p>
+            <p>
+              While overall client connections pretty much immediately halved, the number of unsolicited, malformed, malicious or otherwise junk queries dropped by a much larger amount.
+            </p>
+            <p>
+              Secure connections are faster, while maintaining comparable or better security to RSA certification.
+            </p>
+            <p>
+              Bullshit and general fuckery is low.
+            </p>
+            <p>
+              If I have any regret in this regard, it's not doing this sooner.
+            </p>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="idliketothinkimprettyprogressive">
