saint-lascivious.github.io: just the tip
 - imp ipv6 tooltips
   show alternate ipv6 translation on hover

Changes to be committed:
 - modified:   .formatted/portsandprotocols.html
 - modified:   portsandprotocols.html

--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -181,43 +181,43 @@
               Sainternet Filtered DNS is available over the following ports and protocols.
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-            <table>
-              <tr>
-                <th>Type</th>
-                <th>Address</th>
-                <th>Port</th>
-              </tr>
-              <tr>
-                <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
-                <td><code>dns.sainternet.xyz</code></td>
-                <td>TCP<br><code>443</code></td>
-              </tr>
-              <tr>
-                <td><a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
-                <td><code>dns.sainternet.xyz</code></td>
-                <td>UDP<br><code>443</code></td>
-              </tr>
-              <tr>
-                <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
-                <td><code>119.224.127.171</code><br><code>::ffff:77e0:7fab</code></td>
-                <td>TCP<br><code>53</code></td>
-              </tr>
-              <tr>
-                <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
-                <td><code>dns.sainternet.xyz</code></td>
-                <td>TCP<br><code>853</code></td>
-              </tr>
-              <tr>
-                <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
-                <td><code>119.224.127.171</code><br><code>::ffff:77e0:7fab</code></td>
-                <td>UDP<br><code>53</code></td>
-              </tr>
-              <tr>
-                <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
-                <td><code>dns.sainternet.xyz</code></td>
-                <td>UDP<br><code>853</code></td>
-              </tr>
-            </table>
+              <table>
+                <tr>
+                  <th>Type</th>
+                  <th>Address</th>
+                  <th>Port</th>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
+                  <td><code>dns.sainternet.xyz</code></td>
+                  <td>TCP<br><code>443</code></td>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
+                  <td><code>dns.sainternet.xyz</code></td>
+                  <td>UDP<br><code>443</code></td>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
+                  <td><code>119.224.127.171</code><br><span id="tooltip-ipv6-1"><code>::ffff:77e0:7fab</code></span><span class="mdl-tooltip mdl-tooltip--top" for="tooltip-ipv6-1"><code>::ffff:119.224.127.171</code></span></td>
+                  <td>TCP<br><code>53</code></td>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
+                  <td><code>dns.sainternet.xyz</code></td>
+                  <td>TCP<br><code>853</code></td>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
+                  <td><code>119.224.127.171</code><br><span id="tooltip-ipv6-2"><code>::ffff:77e0:7fab</code></span><span class="mdl-tooltip mdl-tooltip--top" for="tooltip-ipv6-2"><code>::ffff:119.224.127.171</code></span></td>
+                  <td>UDP<br><code>53</code></td>
+                </tr>
+                <tr>
+                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
+                  <td><code>dns.sainternet.xyz</code></td>
+                  <td>UDP<br><code>853</code></td>
+                </tr>
+              </table>
             </div>
           </div>
         </div>
